--- a/CinemaBook/Base.lproj/Main.storyboard
+++ b/CinemaBook/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Menu-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CinemaBook" customModuleProvider="target" sceneMemberID="viewController">
@@ -21,12 +21,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g0j-NC-eDv">
-                                <rect key="frame" x="0.0" y="48" width="375" height="619"/>
-                                <connections>
-                                    <segue destination="4SP-GP-ce5" kind="embed" id="Xuw-h9-YEN"/>
-                                </connections>
-                            </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mjv-K1-YYn">
                                 <rect key="frame" x="0.0" y="64" width="118" height="603"/>
                                 <constraints>
@@ -36,23 +30,37 @@
                                     <segue destination="IRc-01-8uC" kind="embed" id="Qyl-Zh-W1I"/>
                                 </connections>
                             </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g0j-NC-eDv">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <connections>
+                                    <segue destination="4SP-GP-ce5" kind="embed" id="Xuw-h9-YEN"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="mjv-K1-YYn" secondAttribute="bottom" id="4h2-pk-BUy"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="g0j-NC-eDv" secondAttribute="bottom" id="Bgc-wu-je8"/>
                             <constraint firstItem="mjv-K1-YYn" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="64" id="HQI-Qe-OBr"/>
-                            <constraint firstItem="g0j-NC-eDv" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="48" id="QKT-0R-acd"/>
+                            <constraint firstItem="g0j-NC-eDv" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="64" id="QKT-0R-acd"/>
                             <constraint firstAttribute="trailing" secondItem="g0j-NC-eDv" secondAttribute="trailing" id="Sak-DC-D0K"/>
                             <constraint firstItem="mjv-K1-YYn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="WOg-Hw-FnW"/>
                             <constraint firstItem="g0j-NC-eDv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="xeX-f8-DZ8"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="BUH-7O-29n">
-                        <barButtonItem key="leftBarButtonItem" systemItem="fastForward" id="d2P-oW-rFG">
+                    <navigationItem key="navigationItem" title="Menu" id="1zx-uv-024" propertyAccessControl="none">
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="fastForward" id="sm3-qs-c2g">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
-                                <action selector="SideBar:" destination="BYZ-38-t0r" id="Fc6-WV-lmY"/>
+                                <action selector="SideBar:" destination="BYZ-38-t0r" id="rHi-IV-JTj"/>
                             </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="x7a-gV-ugX">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="m8Q-rq-P14">
+                                <rect key="frame" x="276" y="7" width="83" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Test Button"/>
+                            </button>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
@@ -72,7 +80,7 @@
                         <viewControllerLayoutGuide type="bottom" id="PHA-yt-G7E"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="nGf-cG-kN2">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="619"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="0.059605572920000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -118,20 +126,25 @@
         <!--Navigation Controller-->
         <scene sceneID="pgj-uI-J7V">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9o4-37-NPh" sceneMemberID="viewController">
+                <navigationController autoresizesArchivedViewToFullSize="NO" automaticallyAdjustsScrollViewInsets="NO" id="9o4-37-NPh" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="2Ua-c7-Cfe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="H1w-ja-Atg">
+                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="voe-pR-Cqi"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dDD-Vx-xFo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="116" y="122.78860569715144"/>
+            <point key="canvasLocation" x="49" y="46"/>
         </scene>
     </scenes>
 </document>
