--- a/CinemaBook/Base.lproj/Main.storyboard
+++ b/CinemaBook/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="9o4-37-NPh">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -23,6 +23,7 @@
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mjv-K1-YYn">
                                 <rect key="frame" x="0.0" y="64" width="118" height="603"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="118" id="QWr-hP-Y7C"/>
                                 </constraints>
@@ -31,7 +32,7 @@
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g0j-NC-eDv">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="134" y="64" width="241" height="603"/>
                                 <connections>
                                     <segue destination="4SP-GP-ce5" kind="embed" id="Xuw-h9-YEN"/>
                                 </connections>
@@ -39,17 +40,17 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="mjv-K1-YYn" secondAttribute="bottom" id="4h2-pk-BUy"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="g0j-NC-eDv" secondAttribute="bottom" id="Bgc-wu-je8"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="mjv-K1-YYn" secondAttribute="bottom" id="8j5-st-ToH"/>
                             <constraint firstItem="mjv-K1-YYn" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="64" id="HQI-Qe-OBr"/>
                             <constraint firstItem="g0j-NC-eDv" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="64" id="QKT-0R-acd"/>
                             <constraint firstAttribute="trailing" secondItem="g0j-NC-eDv" secondAttribute="trailing" id="Sak-DC-D0K"/>
                             <constraint firstItem="mjv-K1-YYn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="WOg-Hw-FnW"/>
-                            <constraint firstItem="g0j-NC-eDv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="xeX-f8-DZ8"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="g0j-NC-eDv" secondAttribute="bottom" id="svC-2O-u7M"/>
+                            <constraint firstItem="g0j-NC-eDv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="134" id="xeX-f8-DZ8"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Menu" id="1zx-uv-024" propertyAccessControl="none">
-                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="fastForward" id="sm3-qs-c2g">
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="action" id="sm3-qs-c2g">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="SideBar:" destination="BYZ-38-t0r" id="rHi-IV-JTj"/>
@@ -80,7 +81,7 @@
                         <viewControllerLayoutGuide type="bottom" id="PHA-yt-G7E"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="nGf-cG-kN2">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="241" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="0.059605572920000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -93,6 +94,10 @@
         <scene sceneID="6sa-S1-wzg">
             <objects>
                 <viewController id="IRc-01-8uC" customClass="ListViewController" customModule="CinemaBook" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="4gM-Bg-0E0"/>
+                        <viewControllerLayoutGuide type="bottom" id="Eae-PJ-aXY"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="IIg-gt-K28">
                         <rect key="frame" x="0.0" y="0.0" width="118" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
