--- a/CinemaBook/Base.lproj/Main.storyboard
+++ b/CinemaBook/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Menu-->
+        <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CinemaBook" customModuleProvider="target" sceneMemberID="viewController">
@@ -32,7 +32,7 @@
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g0j-NC-eDv">
-                                <rect key="frame" x="134" y="64" width="241" height="603"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <connections>
                                     <segue destination="4SP-GP-ce5" kind="embed" id="Xuw-h9-YEN"/>
                                 </connections>
@@ -46,22 +46,15 @@
                             <constraint firstAttribute="trailing" secondItem="g0j-NC-eDv" secondAttribute="trailing" id="Sak-DC-D0K"/>
                             <constraint firstItem="mjv-K1-YYn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="WOg-Hw-FnW"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="g0j-NC-eDv" secondAttribute="bottom" id="svC-2O-u7M"/>
-                            <constraint firstItem="g0j-NC-eDv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="134" id="xeX-f8-DZ8"/>
+                            <constraint firstItem="g0j-NC-eDv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="xeX-f8-DZ8"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Menu" id="1zx-uv-024" propertyAccessControl="none">
+                    <navigationItem key="navigationItem" id="1zx-uv-024" propertyAccessControl="none">
                         <barButtonItem key="leftBarButtonItem" style="plain" systemItem="action" id="sm3-qs-c2g">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="SideBar:" destination="BYZ-38-t0r" id="rHi-IV-JTj"/>
                             </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="x7a-gV-ugX">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="m8Q-rq-P14">
-                                <rect key="frame" x="276" y="7" width="83" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Test Button"/>
-                            </button>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
@@ -81,7 +74,7 @@
                         <viewControllerLayoutGuide type="bottom" id="PHA-yt-G7E"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="nGf-cG-kN2">
-                        <rect key="frame" x="0.0" y="0.0" width="241" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="0.059605572920000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
