--- a/CinemaBook/Base.lproj/LaunchScreen.storyboard
+++ b/CinemaBook/Base.lproj/LaunchScreen.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,20 +22,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Capture1" translatesAutoresizingMaskIntoConstraints="NO" id="VpN-39-EiR">
-                                <rect key="frame" x="67" y="269" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Capture1" translatesAutoresizingMaskIntoConstraints="NO" id="VpN-39-EiR">
+                                <rect key="frame" x="16" y="203" width="343" height="183"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="VpN-39-EiR" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="183" id="3qv-SI-eu5"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="VpN-39-EiR" secondAttribute="bottom" constant="281" id="ORA-9m-Afq"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="VpN-39-EiR" secondAttribute="trailing" id="bVb-X6-eWf"/>
+                            <constraint firstItem="VpN-39-EiR" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="zqy-Z7-LS2"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Capture1" width="351" height="287"/>
+        <image name="Capture1" width="47" height="38"/>
     </resources>
 </document>
