--- a/CinemaBook/Base.lproj/Main.storyboard
+++ b/CinemaBook/Base.lproj/Main.storyboard
@@ -51,13 +51,13 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Menu" id="1zx-uv-024" propertyAccessControl="none">
-                        <barButtonItem key="leftBarButtonItem" title="Item" image="if_menu-alt_134216" style="plain" id="sm3-qs-c2g">
+                        <barButtonItem key="leftBarButtonItem" title="Item" image="if_menu-alt_134216" id="sm3-qs-c2g">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="SideBar:" destination="BYZ-38-t0r" id="rHi-IV-JTj"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="search" id="xcb-TX-pg9"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="xcb-TX-pg9"/>
                     </navigationItem>
                     <connections>
                         <outlet property="leftspace" destination="xeX-f8-DZ8" id="Kzh-B6-L81"/>
@@ -129,7 +129,7 @@
                                         <rect key="frame" x="0.0" y="28" width="118" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Byf-H6-e19" id="5gO-Q5-G4B">
-                                            <rect key="frame" x="0.0" y="0.0" width="118" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="118" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -152,7 +152,7 @@
                 <navigationController autoresizesArchivedViewToFullSize="NO" automaticallyAdjustsScrollViewInsets="NO" id="9o4-37-NPh" sceneMemberID="viewController">
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2Ua-c7-Cfe">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="2Ua-c7-Cfe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -190,11 +190,15 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2FQ-jr-uow" id="4Yp-5s-EK3">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Eyx-Yi-KWE" id="Dnu-5d-gAH"/>
+                                    <outlet property="delegate" destination="Eyx-Yi-KWE" id="i7T-ZO-xe6"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -202,7 +206,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Doi-Ui-1sR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2517.5999999999999" y="122.78860569715144"/>
+            <point key="canvasLocation" x="2508" y="123"/>
         </scene>
     </scenes>
     <resources>
