--- a/CinemaBook/TableViewCell1.xib
+++ b/CinemaBook/TableViewCell1.xib
@@ -17,7 +17,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="125"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="125"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="124.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="neU-RS-of8">
@@ -42,6 +42,10 @@
                     <constraint firstItem="neU-RS-of8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="w7d-TA-fX4"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="movieImage" destination="neU-RS-of8" id="A8a-8I-xfF"/>
+                <outlet property="movieTitle" destination="B04-Jx-uEl" id="g04-LK-iAW"/>
+            </connections>
             <point key="canvasLocation" x="25" y="-4.5"/>
         </tableViewCell>
     </objects>
