--- a/CinemaBook/Base.lproj/Main.storyboard
+++ b/CinemaBook/Base.lproj/Main.storyboard
@@ -89,7 +89,7 @@
                                 <rect key="frame" x="65" y="42" width="245" height="125"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.059605572920000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="lCg-WP-AEV" firstAttribute="top" secondItem="Gsn-LX-MfH" secondAttribute="bottom" constant="121" id="Nki-2c-Ye6"/>
                             <constraint firstItem="PHA-yt-G7E" firstAttribute="top" secondItem="lCg-WP-AEV" secondAttribute="bottom" id="VOH-9l-1y8"/>
@@ -146,6 +146,46 @@
             </objects>
             <point key="canvasLocation" x="1054" y="768"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="9Wo-SF-aGN">
+            <objects>
+                <viewController id="6k6-Ug-mhA" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ih2-kZ-rQ3"/>
+                        <viewControllerLayoutGuide type="bottom" id="oAk-0b-fbV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="w34-lS-rbZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bookings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m66-O7-sce">
+                                <rect key="frame" x="152" y="66" width="74" height="141"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="weT-fP-21B">
+                                <rect key="frame" x="22" y="617" width="34" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="3Lm-Pv-2ny"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="m66-O7-sce" firstAttribute="top" secondItem="ih2-kZ-rQ3" secondAttribute="bottom" constant="46" id="1xH-Cq-6ID"/>
+                            <constraint firstItem="oAk-0b-fbV" firstAttribute="top" secondItem="m66-O7-sce" secondAttribute="bottom" constant="460" id="3Uc-0o-5Os"/>
+                            <constraint firstItem="m66-O7-sce" firstAttribute="leading" secondItem="w34-lS-rbZ" secondAttribute="leadingMargin" constant="136" id="6hr-43-BoX"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="m66-O7-sce" secondAttribute="trailing" constant="133" id="FWd-WZ-ybG"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Su8-8L-BlB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1800.8" y="781.25937031484261"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="pgj-uI-J7V">
             <objects>
@@ -193,6 +233,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.28151311528497414" green="0.016554617298577535" blue="0.0025468492941466887" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -213,4 +254,7 @@
         <image name="Capture2 copy" width="150" height="125"/>
         <image name="if_menu-alt_134216" width="28" height="28"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="3Lm-Pv-2ny"/>
+    </inferredMetricsTieBreakers>
 </document>
